@@ -928,11 +928,11 @@ public class PrimitiveNode implements NodeProtoId, NodeProto, Comparable<Primiti
 	public PortProto findPortProto(Name name)
 	{
         if (name == null) return null;
-		name = name.canonic();
+		String nameString = name.canonicString();
 		for (int i = 0; i < primPorts.length; i++)
 		{
 			PrimitivePort pp = primPorts[i];
-			if (pp.getNameKey().canonic() == name)
+			if (pp.getNameKey().canonicString() == nameString)
 				return pp;
 		}
 		return null;
