@@ -4,6 +4,8 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04b: *********************************
 
+IMP: (11/16/05, DN) Memory optimization: Name module stores only canonic String instead of Name.
+
 IMP: (11/15/05, SMR) Spice templates can now have multiple lines.
 
 IMP/MAN: (11/15/05, SMR) New command: "Tool / Network / Repair Power and Ground" fixes
